# Prusa-Firmware-Buddy

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/lwesp/: CMakeLists.txt  lwesp_opts.h
lib/lwesp/src/system/: lwesp_hal_stm32.c  lwesp_hal_stm32f4xxxx.c
lib/lwmem/: CMakeLists.txt
src/: main.cpp
src/common/: appmain.cpp
